fix: ai section alignment

--- a/_src/blocks/personalisation-block/ai-page/styles.css
+++ b/_src/blocks/personalisation-block/ai-page/styles.css
@@ -163,6 +163,7 @@
     display: flex;
     margin-bottom: 64px;
     margin-top: 64px;
+    justify-content: space-between;
   }
 
   .ai-left {
